# coserv-rs

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
src/: discovery.rs  lib.rs
src/coserv/: common.rs  mod.rs  query.rs  result.rs
src/error/: coserv.rs  discovery.rs  mod.rs
testdata/: rv-class-simple-results.b64u  rv-class-simple-results.cbor  rv-class-simple-results.diag  rv-class-simple-results.hex  rv-class-stateful.b64u  rv-class-stateful.cbor  rv-class-stateful.diag  rv-class-stateful.hex
